<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meeting_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fffdfd"
    tools:context="com.example.android.trackme.ActiveMeetingDetails.MeetingInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_meeting_details"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:text="@string/client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_client_name"
        android:layout_marginTop="40dp"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_meeting_details"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/client_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"

        android:id="@+id/text_view_client_name_value"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_client_name"
        app:layout_constraintTop_toTopOf="@+id/text_view_client_name"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_client_name" />

    <TextView
        android:text="@string/activity"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity"
        android:textStyle="bold"

        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_client_name" />

    <TextView
        android:text="@string/activity_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/activity_value"
        android:textColor="#000"

        app:layout_constraintTop_toTopOf="@+id/activity"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toRightOf="@+id/activity" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/date"
        android:textStyle="bold"

        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_value" />

    <TextView
        android:text="@string/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/date_value"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        android:layout_marginStart="80dp"
        app:layout_constraintLeft_toRightOf="@+id/date"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"

        android:id="@+id/time"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/date_value" />

    <TextView
        android:text="@string/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"

        android:id="@+id/time_value"
        app:layout_constraintTop_toTopOf="@+id/time"
        app:layout_constraintBottom_toBottomOf="@+id/time"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toRightOf="@+id/time"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:text="@string/button_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_checkin"
        android:background="@color/colorPrimary"
        android:layout_marginStart="16dp"
        android:textColor="#000"
        android:onClick="checkin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/check_out_value" />


    <TextView
        android:text="@string/meeting_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/meeting_flag"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/time_value" />

    <TextView
        android:text="@string/value_flag"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_flag"
        app:layout_constraintTop_toTopOf="@+id/meeting_flag"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_flag"
        android:layout_marginStart="72dp"
        app:layout_constraintLeft_toRightOf="@+id/meeting_flag"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/chech_in_title"
        android:layout_width="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:id="@+id/check_in_time"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/value_flag"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/check_in_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/chech_in_value"
        app:layout_constraintTop_toTopOf="@+id/check_in_time"
        app:layout_constraintBottom_toBottomOf="@+id/check_in_time"
        app:layout_constraintLeft_toRightOf="@+id/check_in_time"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="24dp" />

    <TextView
        android:text="@string/chech_out_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/check_out_title"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/check_in_time" />

    <TextView
        android:text="@string/check_out_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/check_out_value"
        app:layout_constraintBottom_toBottomOf="@+id/check_out_title"
        app:layout_constraintTop_toTopOf="@+id/check_out_title"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/check_out_title" />


</android.support.constraint.ConstraintLayout>
