<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_upload_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.trackme.UploadMeetingActivity">


    <TextView
        android:text="@string/title_textview_new_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_new_meeting"
        android:layout_marginStart="16dp"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/client_name"
        android:id="@+id/name"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/title_new_meeting"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:hint="Date(Double Click)"
        android:ems="10"
        android:id="@+id/date_new_meeting"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/activity_new_meeting"
        android:id="@+id/activity_new_meeting"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/date_new_meeting" />

    <EditText
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/time_new_meeting"
        android:ems="10"
        android:id="@+id/time_new_meeting"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_new_meeting" />

    <Button
        android:text="Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_meeting_button"
        android:layout_marginStart="16dp"
        android:onClick="send"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/time_new_meeting" />


</android.support.constraint.ConstraintLayout>
