<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.trackme.DetailsActivity">





    <TextView
        android:text="@string/text_name"
        android:layout_width="118dp"
        android:layout_height="28dp"
        android:id="@+id/text_name"
        android:gravity="left"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/text_details"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.09" />

    <TextView
        android:text="TextView"
        android:layout_width="204dp"
        android:layout_height="32dp"
        android:id="@+id/value_name"
        android:gravity="left"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintRight_toRightOf="@+id/text_name"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:text="@string/details_title"
        android:layout_width="160dp"
        android:layout_height="41dp"
        android:id="@+id/text_details"
        android:gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/text_email"
        android:layout_width="114dp"
        android:layout_height="30dp"
        android:gravity="left"
        android:id="@+id/text_email"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/value_name"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:text="TextView"
        android:layout_width="282dp"
        android:layout_height="31dp"
        android:id="@+id/value_email"
        android:gravity="left"
        app:layout_constraintRight_toRightOf="@+id/text_email"
        app:layout_constraintLeft_toLeftOf="@+id/text_email"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:text="@string/text_deparment"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:gravity="left"
        android:id="@+id/text_department"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/value_email"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:text="TextView"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:gravity="left"
        android:id="@+id/value_department"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_department"
        app:layout_constraintLeft_toLeftOf="@+id/text_department"
        app:layout_constraintRight_toRightOf="@+id/text_department"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/text_designation"
        android:layout_width="122dp"
        android:layout_height="31dp"
        android:id="@+id/text_designation"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/value_department" />

    <TextView
        android:text="TextView"
        android:layout_width="242dp"
        android:layout_height="29dp"
        android:id="@+id/value_designation"
        app:layout_constraintRight_toRightOf="@+id/text_designation"
        app:layout_constraintLeft_toLeftOf="@+id/text_designation"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_designation" />


</android.support.constraint.ConstraintLayout>
    </ScrollView>
